# StockSmith-App

./: .gitignore  README.md  docker-compose.yml  index.html
backend/: .env.example  alembic.ini  build.ps1  pyproject.toml  stocksmith-backend.spec
backend/alembic/: env.py
backend/alembic/versions/: 02ac4edc9f24_finished_goods_stock_and_builds.py  0554b25d9c17_add_platform_app_credentials.py  0e439134ec5b_stock_adjustments.py  17fcb4346ec9_platform_ceiling_qty.py  2062e429185a_initial_schema.py  41e0fc2026ba_material_reorder_defaults.py  41eaa7553763_add_platform_connection_auto_sync_.py  4474f334b497_generic_external_account_id.py  464ccf61382a_product_barcode.py  4cbd5b0940cd_add_product_push_buildable_capacity.py  789d0a3995db_add_platform_listing_pushes.py  812a657d8f98_variant_attribute_matrix.py  a1c3e9f7b2d4_material_adjustment_source_refs.py  a3f9c7b12d84_variant_bom_substitution.py  a4c8e2f6b193_shipping_profiles_and_default_currency.py  a8c3f1d9e246_sku_aliases.py  ab7b0c8a2ae7_material_adjustment_mode.py  ae97d79165de_kitting_boms.py  b3f6d1a8c957_sync_run_shipped_count.py  b7c1e9f4a2d6_material_types.py  b7e2f4a9c831_shipping_profile_per_platform_costs.py  b8e4f1a7c3d2_platform_shop_identity.py  c1d4e8f2a9b3_orders_and_allocation.py  c4d76f2b8a91_etsy_sync_start_date.py  c5d8f2a4e6b1_add_blanks_material_category.py  c9f7aeb2792a_order_financials_and_cost_snapshots.py  ccf4a0f4bd8f_add_platform_connection_environment.py  (+15 more)
backend/app/: __main__.py  bootstrap.py  config.py  db.py  deps.py  main.py  seed.py
backend/scripts/: migrate_pg_to_sqlite.py
(+181 files in other folders)
