[project]
name = "stocksmith-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=44.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
